test/samples/invalid/resolving/missing_mem_id.maruir
fun boo<M>()

fun foo()
{
    entry:
        call boo<M>();
        return;
}